--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
     scroll-behavior: smooth; 
 }
+@font-face {
+    font-family: 'cera pro black';
+    src: url("Cera Pro Font/Cera Pro Black.otf") format("truetype");
+}
 
 
 header {
@@ -22,7 +26,11 @@ header {
     top: 0px;
     transition-duration: 1s;
 }
-
+.containere{
+    height:41rem;
+    background-image: url("chemistry.gif");
+    background-size: 1330px;
+}
 .f{
     width:200px;
 }
@@ -132,6 +140,7 @@ section {
     font-size:500px;
 }
 .Mod{
+    font-size:40px;
     font-size:40px;
     overflow: hidden;
   white-space: nowrap;
@@ -305,6 +314,18 @@ section {
     justify-content: space-between;
     
 }
+.btn btn-danger{
+    position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+.But{
+    position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
 
 .footer-title {
     font-size: 1.3em;
@@ -349,7 +370,9 @@ section {
         flex-direction: column;
         align-items: center;
     }
-
+.Mod{
+    font-size:39px;
+}
 }
 
 @media (max-width:641px){
@@ -364,12 +387,18 @@ section {
     .main-content h3{
         font-size: 1.4em;
     }
+    .Mod{
+        font-size:20px;
+    }
 }
 
-@media (max-width:300px){
+@media (max-width:430px){
     body{
         font-size: 10px;
      
+    }
+    .Mod{
+        font-size:17px;
     }
 }
 /* UTILITIES */
@@ -489,7 +518,7 @@ input[type=checkbox]{
     transition: 0.3s ease;
    }
    .Mod{
-    font-size:50px;
+    font-size:30px;
     overflow: hidden;
   white-space:nowrap;
   width: 0;
@@ -498,6 +527,15 @@ input[type=checkbox]{
   animation-timing-function: steps(30, end);
   animation-fill-mode: forwards
    }
+   .containere {
+    background-image:url("chemistry.gif");
+    background-size: 600px
+   }
+   .carousel-item {
+    height:41rem;
+    background-image: url("NYU.gif");
+    background-size: 750px;
+}
    .menu li + li {
     margin-top: 12px;
    }
@@ -517,11 +555,15 @@ input[type=checkbox]{
    } 
   .chess {
     font-family:cera pro black;
+    align-items: center;
   }}
-  @media (max-width: 400px) {
+  @media (max-width: 450px) {
     .Mod{
-        font-size:22px;
+        font-size:21px;
     }
   }
   
   
+  
+  
+
